# procure-lite

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  USAGE.md  alembic.ini  api_utils.py  app_runtime.py  auth_security.py  auto_backup_service.py  backup_service.py  database.py  desktop.py  docker-compose.yml  export_utils.py  installer.iss  main.py  pyproject.toml  requirements-dev.txt  requirements-server.txt  schemas.py  security_headers.py  start.sh  start_docker_server.bat  webdav_service.py
db/: __init__.py  constants.py  filters.py  items.py  migrations.py  operations.py  reports.py  schema.py
docs/: README.md  cloud-deployment.md  release-checklist.md  shared-web-service.md  vps-deployment.md
installer/: OfficeSuppliesTracker.iss
parser/: parser_core.py
routers/: imports.py  items.py  ops.py  reports.py  system.py
scripts/: build_windows.ps1  build_windows_installer.ps1  bump_version.py  run_api_smoke_checks.py  start_docker_server.ps1  start_mobile_access.bat  validate_project.py  verify_vps_deployment.sh
static/: api.js  app.css  index.html  ledger-batch-toolbar.js  ledger-detail-modal.js  ledger-filter-panel.js  ledger-table-panel.js  ledger-ui-helpers.js  manifest.webmanifest  operations-center-app-api.js  ops-exceptions-panel.js  ops-master-data-panel.js  ops-overview-panel.js  ops-panel-mixin.js  ops-procurement-panel.js  pwa.js  settings-maintenance-api.js  state.js  sw.js  ui.js  view-config.js
tests/: conftest.py  test_audit_empty_state_static.py  test_auth.py  test_auth_ui_static.py  test_auto_backup.py  test_backup.py  (+30 more)
(+77 files in other folders)
