[project]
name = "procure-lite"
dynamic = ["version", "readme"]
requires-python = ">=3.11"
description = "Procure Lite：轻量自托管采购台账系统"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
follow_imports = "silent"
ignore_missing_imports = true
exclude = [
    "static/",
    "alembic/",
    "data/",
    "uploads/",
    "outputs/",
    ".venv/",
    "venv/",
]
